--- a/src/app/leagues/leagues.component.html
+++ b/src/app/leagues/leagues.component.html
@@ -1,1 +1,29 @@
-<h1>{{league.name}}</h1>
+<div class="container">
+    <H2>My Leagues</H2>
+    <div class="row">
+        <div class="col-md-8">
+            <ul class="list-group">
+                <button class="list-group-item list-group-item-action" 
+                *ngFor="let league of leagues" 
+                (click)="onSelectLeague(league)"
+                [class.active]="league === selectedLeague">
+                    {{league.name}}
+                    <span class="badge badge-info badge-pill">{{league.id}}</span>
+                </button>
+            </ul>
+        </div>
+
+        <div class="col-md-4">
+            <div class="jumbotron">
+                <label>
+                    Name:
+                    <input class="form-control" [(ngModel)]="selectedLeague.name" placeholder="name..">
+                </label>
+                <div *ngIf="selectedLeague.id">
+                    <p>id: {{selectedLeague.id}}</p>
+                    <h2>{{selectedLeague.name | uppercase}}</h2>                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
