--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
+  <app-navbar></app-navbar>
   <h1>
     Welcome to {{ title }}!    
   </h1>
-  <app-leagues></app-leagues>
+  <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
 
