--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,6 @@
-<div class="container">   
+<div>   
     <div class="row">
-    <h4 class="col text-left">Messages:</h4>
+    <h4 class="col text-left">Messages</h4>
     <div class="col text-right">
       <button class="btn btn-warning"
       (click)="messageService.clear()">
