--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,12 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-primary">
   <a class="navbar-brand" href="#">ANGULAR LEAGUE</a>
 
-  <ul class="navbar-nav pull-right">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/">Home</a>
-      </li>
+  <ul class="navbar-nav ml-auto">
       <li class="nav-item">
           <a class="nav-link" routerLink="/leagues">Leagues</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
+          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
       </li>
     </ul>
 </nav>
